ROTA NOVA CONTAS-A-PAGAR

--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -36,6 +36,7 @@
         <a href="/rcas">📈 RCAs</a>
         <a href="/fornecedores">🏭 Fornecedores</a>
         <a href="/fluxo-caixa">💰 Fluxo de Caixa</a>
+        <a href="/contas-a-pagar">💸 Contas a Pagar</a>
         <a href="/faturamento">🧾 Faturamento</a>
         <a href="/dre">📈 DRE</a>
         <a href="/gerenciar/produtos">⚙️ Gerenciar</a>
