--- a/src/views/contas-a-pagar.ejs
+++ b/src/views/contas-a-pagar.ejs
@@ -6,7 +6,7 @@
 
 <div class="card">
   <h2>💸 Nova Conta a Pagar</h2>
-  <form action="/contas-a-pagar" method="POST">
+  <form action="/contas-a-pagar/" method="POST">
     <div class="form-row">
         <div class="form-group">
             <label for="descricao">Descrição *</label>
