--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -38,6 +38,7 @@
         <a href="/fluxo-caixa">💰 Fluxo de Caixa</a>
         <a href="/contas-a-pagar">💸 Contas a Pagar</a>
         <a href="/contas-a-receber">🧾 Contas a Receber</a>
+        <a href="/inadimplencia">🚨
         <a href="/dre">📈 DRE</a>
         <a href="/gerenciar/produtos">⚙️ Gerenciar</a>
         <a href="/usuarios">👥 Usuários</a>
